--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taylor's Vinyls</title>
+    <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/de7b03959b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -18,7 +19,7 @@
         </div>
         <ul class="nav-menu hidden">
             <li><a href="#header">Home</a></li>
-            <li><a href="#shop">Shop</a></li>
+            <li><a href="#collection">Collection</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -31,7 +32,7 @@
         <h1>TAYLOR'S VINYLS</h1>
     </header>
 
-    <section class="gallery" id="shop">
+    <section class="gallery" id="collection">
         <article>
             <img src="./assets/img/1989-vinyl.png" alt="Vinilo 1989">
         </article>
@@ -87,7 +88,7 @@
         <div class="contact-us">            
             <h4 style="margin-top: 0px;">CONTACT US</h4>
             <div class="contact-us-icons">
-                <p><i class="fa-solid fa-phone"></i>+56 9 9876 54321</p>
+                <p><i class="fa-solid fa-phone"></i>+56 9 8765 4321</p>
                 <p><i class="fa-solid fa-envelope"></i>taylors@vinyls.com</p>
             </div>
         </div>
